Horizontal Scrolling with fixed title

--- a/src/demo/demo01/index.css
+++ b/src/demo/demo01/index.css
@@ -3,20 +3,40 @@
     padding: 0;
     box-sizing: border-box;
 }
+.main {
+    width: 100vw;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+    @media screen and (min-width: 992px) {
+        height: 500px;
+        margin-top: 200px;
+    }
+}
+.title {
+    width: 20vw;
+    font-size: 22px;
+    height: 100px;
+    line-height: 1;
+    text-align: center;
+    @media screen and (min-width: 992px) {
+        height: 500px;
+        line-height: 500px;
+    }
+}
 .container {
     scroll-behavior: smooth;
-    width: 100vw;
+    width: 80vw;
     height: 100px;
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
-    padding-left: 15px;
-    margin-top: 200px;
     @media screen and (min-width: 992px) {
         height: 500px;
-        padding-left: 150px;
     }
 }
 .item {
